==> saharShut/Experimental_STM32F407/Lib/openblt/ARMCM0_XMC1/mbrtu.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "xmc_uart.h"                            /* UART driver header                 */
#define MBRTU_BYTE_TX_TIMEOUT_MS          (10u)
#define MBRTU_CHANNEL ((XMC_USIC_CH_t *)(mbrtuChannelMap[BOOT_COM_MBRTU_CHANNEL_INDEX]))

void MbRtuInit(void)
{
  blt_int16u startTimeTicks;
  blt_int16u deltaTimeTicks;
  blt_int16u currentTimeTicks;
  blt_int8u  rxDummy;
  XMC_UART_CH_CONFIG_t uart_config;

  /* the current implementation supports XMC_UART0_CH0 to XMC_UART1_CH1. throw an
   * assertion error in case a different UART channel is configured.
   */
  ASSERT_CT((BOOT_COM_MBRTU_CHANNEL_INDEX >= 0) && (BOOT_COM_MBRTU_CHANNEL_INDEX <= 3));

  /* calculate the 3.5 character delay time in free running counter ticks. note that
   * the free running counter runs at 100 kHz, so one tick is 10 us. For baudrates >
   * 19200 bps, it can be fixed to 1750 us.
   */
  if (BOOT_COM_MBRTU_BAUDRATE > 19200)
  {
    /* set T3_5 time to a fixed value of 1750 us. */
    mbRtuT3_5Ticks = 175;
  }
  /* calculate the T3_5 time, because the baudrate is <= 19200 bps. */
  else
  {
    /* T3_5 [us * 10] = 3.5 * Tchar = 3.5 * 11 * 100000 / baudrate = 3850000 / baudrate.
     * make sure to do integer round up though. Make sure to add 1 to adjust for 10us
     * timer resolution inaccuracy.
     */
    mbRtuT3_5Ticks = (blt_int16u)(((3850000UL + (BOOT_COM_MBRTU_BAUDRATE - 1U)) /
                                    BOOT_COM_MBRTU_BAUDRATE) + 1);
  }

  /* set configuration and initialize UART channel */
  uart_config.baudrate = BOOT_COM_MBRTU_BAUDRATE;
  uart_config.data_bits = 8;
  uart_config.frame_length = 8;
  uart_config.stop_bits = BOOT_COM_MBRTU_STOPBITS;
  uart_config.oversampling = 16;
  uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_NONE;
  /* odd parity enabled? */
  #if (BOOT_COM_MBRTU_PARITY == 1)
  uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_ODD;
  #endif
  /* even parity enabled? */
  #if (BOOT_COM_MBRTU_PARITY == 2)
  uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_EVEN;
  #endif
  XMC_UART_CH_Init(MBRTU_CHANNEL, &uart_config);
  /* configure small transmit and receive FIFO */
  XMC_USIC_CH_TXFIFO_Configure(MBRTU_CHANNEL, 16U, XMC_USIC_CH_FIFO_SIZE_16WORDS, 1U);
  XMC_USIC_CH_RXFIFO_Configure(MBRTU_CHANNEL,  0U, XMC_USIC_CH_FIFO_SIZE_16WORDS, 1U);
  /* configure RCIM bits to make sure it detects the parity error (PERR) as RCI[4]. */
  MBRTU_CHANNEL->RBCTR |= USIC_CH_RBCTR_RCIM_Msk;
  /* start UART */
  XMC_UART_CH_Start(MBRTU_CHANNEL);

  /* enable the receiver output to be able to receive. */
  MbRtuDriverOutputControlHook(BLT_FALSE);

  /* wait for idle line detection. This is T3_5 time after reception of the last byte. */
  startTimeTicks = MbRtuFreeRunningCounterGet();
  do
  {
    /* service the watchdog. */
    CopService();
    /* get the current value of the free running counter. */
    currentTimeTicks = MbRtuFreeRunningCounterGet();
    /* check if a byte was received while waiting for the idle line. */
    if (MbRtuReceiveByte(&rxDummy) == BLT_TRUE)
    {
      /* restart the idle line detection. */
      startTimeTicks = currentTimeTicks;
    }
    /* calculate the number of ticks that elapsed since the start or since the last
     * byte reception. Note that this calculation works, even if the free running counter
     * overflowed.
     */
    deltaTimeTicks = currentTimeTicks - startTimeTicks;
  }
  while (deltaTimeTicks < mbRtuT3_5Ticks);
}

static blt_bool MbRtuReceiveByte(blt_int8u *data)
{
  blt_bool   result = BLT_FALSE;
  blt_int32u data_and_status;

  /* wait for the reception of a new byte. */
  if (XMC_USIC_CH_RXFIFO_IsEmpty(MBRTU_CHANNEL) == 0)  
  {
    /* update the result */
    result = BLT_TRUE;
    /* read out the newly received data, including its PERR status flags */
    data_and_status = MBRTU_CHANNEL->OUTR;
    /* check for a frame error. the frame error check is important because it can detect
     * a missing stopbit. on an RS485 bus without bias resistors, the A-B differential
     * voltage is 0. for an RS485 transceiver this is neither a 0 nor a 1 bit, so
     * undefined. most RS485 transceivers feature a reception failsafe function to drive
     * the Rx output (going to the UART Rx) to a defined state of logic 1. in case the
     * used RS485 transceiver doesn't have such a feature, it typically leaves the Rx
     * output in a logic 0 state. this means that after the stop bit of the last packet
     * byte, the UART Rx input sees a logic 0, and assumes it is a start bit. the
     * remaining data bits will always be 0 and, most importantly no stop bit is
     * present, causing a framing error. Long story short: if you don't check for the
     * framing error flag, you might receive an extra byte with value 0, which is not
     * actually transmitted on the RS485 bus. you can catch and ignore this byte by doing
     * a frame error check.
     */
    if( (XMC_UART_CH_GetStatusFlag(MBRTU_CHANNEL) &
        (XMC_UART_CH_STATUS_FLAG_FORMAT_ERROR_IN_STOP_BIT_0 |
         XMC_UART_CH_STATUS_FLAG_FORMAT_ERROR_IN_STOP_BIT_1)) != 0)
    {
      /* clear the error flags. */
      XMC_UART_CH_ClearStatusFlag(MBRTU_CHANNEL,
                                  XMC_UART_CH_STATUS_FLAG_FORMAT_ERROR_IN_STOP_BIT_0 |
                                  XMC_UART_CH_STATUS_FLAG_FORMAT_ERROR_IN_STOP_BIT_1);
      /* ignore the byte because of a detected frame error. */
      result = BLT_FALSE;
    }
    #if (BOOT_COM_MBRTU_PARITY > 0)
    /* check if a parity error was detected (PERR is RCI[4]). */
    if ((data_and_status & 0x00100000UL) != 0)
    {
      /* ignore the byte because of a detected parity error. */
      result = BLT_FALSE;
    }
    #endif
    /* store the newly received byte by casting it to exclude the status flags. */
    *data = (blt_int8u)data_and_status;
  }
  /* give the result back to the caller */
  return result;
}

static void MbRtuTransmitByte(blt_int8u data, blt_bool end_of_packet)
{
  blt_int32u timeout;

  /* clear the status flag that indicates that a frame (byte) finished transmission. */
  XMC_UART_CH_ClearStatusFlag(MBRTU_CHANNEL, XMC_UART_CH_STATUS_FLAG_TRANSMITTER_FRAME_FINISHED);
  /* submit data for transmission. it will be placed in the Tx FIFO and will
   * automatically be moved to the transmit shift register, when this one is no longer
   * busy.
   */
  XMC_UART_CH_Transmit(MBRTU_CHANNEL, data);
  /* set timeout time to wait for transmit completion. */
  timeout = TimerGet() + MBRTU_BYTE_TX_TIMEOUT_MS;

  /* not the last byte of the packet? */
  if (end_of_packet == BLT_FALSE)
  {
    /* wait for the Tx FIFO fill level to be below its configured limit of 1. this
     * means the Tx FIFO is empty and the to-be-transmitted byte is now in the transmit
     * shift register.
     */
    while( (XMC_USIC_CH_TXFIFO_GetEvent(MBRTU_CHANNEL) & XMC_USIC_CH_TXFIFO_EVENT_STANDARD) == 0)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
    /* reset event */
    XMC_USIC_CH_TXFIFO_ClearEvent(MBRTU_CHANNEL, XMC_USIC_CH_TXFIFO_EVENT_STANDARD);
  }
  /* this is the last byte of a packet. */
  else
  {
    /* wait for transmit frame finished flag to be set, indicating that the last byte has
     * left the transmit shift register, including the stopbit(s). this is needed for the
     * last byte, otherwise the transceiver's transmit output gets disabled with
     * MbRtuDriverOutputControlHook() before the byte reception completes. 
     */
    while( (XMC_UART_CH_GetStatusFlag(MBRTU_CHANNEL) & XMC_UART_CH_STATUS_FLAG_TRANSMITTER_FRAME_FINISHED) == 0)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
}

blt_int16u MbRtuFreeRunningCounterGet(void)
{
  static blt_bool initialized = BLT_FALSE;
  static blt_int32u counts_per_ten_us = 0;
  static blt_int32u free_running_counter_last = 0;
  static blt_int16u ten_us_tick_counter = 0;
  blt_int32u free_running_counter_now;
  blt_int32u delta_counts;
  blt_int32u ten_us_ticks;

  /* perform one-time initialization.*/
  if (initialized == BLT_FALSE)
  {
    /* set the flag to make sure that this part only runs once. */
    initialized = BLT_TRUE;
    /* calculate how many counts of the SysTick's free running counter equals 10us,
     * because one count of a 100 kHz counter equals that. Note that the timer module
     * already initialized and enable the SysTick.
     */
    counts_per_ten_us = SystemCoreClock / 100000U;
    /* initialize current value of the timer's free running counter. */
    free_running_counter_last = (SysTick->VAL & SysTick_VAL_CURRENT_Msk);
  }

  /* get the current value of the free running counter. */
  free_running_counter_now = (SysTick->VAL & SysTick_VAL_CURRENT_Msk);
  /* Calculate the number of counts that passed since the detection of the last
   * millisecond event. Keep in mind that the SysTick has a down-counting 24-bit free
   * running counter. Note that this calculation also works, in case the free running
   * counter overflowed, thanks to integer math.
   */
  delta_counts = free_running_counter_last - free_running_counter_now;
  delta_counts &= SysTick_VAL_CURRENT_Msk;

  /* did one or more ten microsecond counts pass since the last event? */
  if (delta_counts >= counts_per_ten_us)
  {
    /* calculate how many ten microsecond counts passed. */
    ten_us_ticks = delta_counts / counts_per_ten_us;
    /* update the counter. */
    ten_us_tick_counter += ten_us_ticks;
    /* store the counter value of the last event to detect the next one. */
    free_running_counter_last -= (ten_us_ticks * counts_per_ten_us);
    free_running_counter_last &= SysTick_VAL_CURRENT_Msk;
  }

  /* return the current value of the 100 kHz free running counter to the caller. */
  return ten_us_tick_counter;
}
